--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -45,7 +45,7 @@
                                 Plan <span>
                                       <span class="dolar">$</span>
                                       <span class="prepay">{{bestPlan.prepayCost}}</span>
-                                      <span class="plan">NOOBIE</span>
+                                      <span class="plan">{{bestPlan.plan}}</span>
                                     </span>
                                     <span class="caption">
                                       <span class="includedEvents">{{bestPlan.includedEvents | split}}</span> events included
