--- a/Front/src/tpl/invoices-update-dialog.html
+++ b/Front/src/tpl/invoices-update-dialog.html
@@ -6,7 +6,6 @@
     </md-toolbar>
 
     <md-dialog-content class="md-dialog-content">
-
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
                 <label class="col-sm-3 control-label">Billing name<span class="star-icon">*</span>: </label>
@@ -29,7 +28,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Address line 2: </label>
                 <div class="col-sm-6">
-                    <input type="text" name="addressline2" class="form-control" ng-model="item.addressline2" required>
+                    <input type="text" name="addressline2" class="form-control" ng-model="item.addressline2">
                 </div>
             </div>
             <div class="form-group">
@@ -74,7 +73,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">SSN / TAX / VAT ID: </label>
                 <div class="col-sm-6">
-                    <input type="text" name="ssntaxvatid" class="form-control" ng-model="item.ssntaxvatid" required>
+                    <input type="text" name="ssntaxvatid" class="form-control" ng-model="item.ssntaxvatid">
                 </div>
             </div>
         </form>
@@ -84,7 +83,7 @@
     <md-dialog-actions>
         <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}
         </md-button>
-        <md-button class="md-primary" ng-click="toPayPal()">{{'next step' | translate}}</md-button>
+        <md-button class="md-primary" ng-disabled="editForm.$invalid" ng-click="toPayPal()">{{'next step' | translate}}</md-button>
     </md-dialog-actions>
 
 </md-dialog>
