UserManagement加载页面闪烁

--- a/Front/src/tpl/eventLog.html
+++ b/Front/src/tpl/eventLog.html
@@ -1,4 +1,4 @@
-\<h1 class="setting-title">
+<h1 class="setting-title">
   Event log
   <p>Event log enables you to browse changes that were made in your account.
   A detailed overview of this feature can be found here.</p>
