report and dashboard date add this year and last year

--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -44,6 +44,8 @@
                     <md-option value="6">Last Week</md-option>
                     <md-option value="7">This Month</md-option>
                     <md-option value="8">Last Month</md-option>
+                    <md-option value="9">This Year</md-option>
+                    <md-option value="10">Last Year</md-option>
                     <md-option value="0">Custom</md-option>
                 </md-select>
             </div>
