--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -87,10 +87,12 @@
                     <span>{{'Conversions' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" class="nav-tips">
                 <a ui-sref="app.report.tsreport" md-ink-ripple>
                     <em class="rd"></em>
-                    <span>{{'TS Report' | translate}}</span>
+                    <span>{{'TS Report' | translate}}
+                     <i class="icon-question-sign"><span class="nav-tips-font">optimize and manage 3rd party traffic source campaign</span></i>
+                    </span>
                 </a>
             </li>
         </ul>
