--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -266,7 +266,7 @@
                 <div class="p-header">
                     <small class="money-icon">$</small>
                     <span class="money-size">39</span>
-                    <small class="money-small">/ Mon</small>
+                    <small class="money-small">/ 2weeks</small>
                 </div>
                 <div class="pricedesc">
                     <p>0.045/1000 overage</p>
