--- a/Front/src/tpl/invoices.html
+++ b/Front/src/tpl/invoices.html
@@ -31,7 +31,7 @@
 						<th md-column md-order-by="amount">Amount</th>
 						<th md-column md-order-by="tax">Tax</th>
 						<th md-column md-order-by="totals">Total</th>
-						<th md-column>Invoice</th>
+						<!-- <th md-column>Invoice</th> -->
 					</tr>
 				</thead>
 				<tbody>
@@ -40,7 +40,7 @@
 						<td>{{p.amount}}</td>
 						<td>{{p.tax}}</td>
 						<td>{{p.totals}}</td>
-						<td><i class="material-icons">file_download</i><span class="download">Download</span></td>
+						<!-- <td><i class="material-icons">file_download</i><span class="download">Download</span></td> -->
 					</tr>
 				</tbody>
 			</table>
