--- a/Front/src/tpl/invoices-update-dialog.html
+++ b/Front/src/tpl/invoices-update-dialog.html
@@ -62,8 +62,7 @@
                 <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-6">
                     <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
-                        <md-option value="Canada">Canada</md-option>
-                        <md-option value="China">China</md-option>
+                        <md-option value="{{country.value}}" ng-repeat="country in countries">{{country.display}}</md-option>
                     </md-select>
                     <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
                     <span ng-show="editForm.country.$error.required">Country is required.</span>
