--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -1,7 +1,7 @@
 <md-dialog class="cs-edit-dialog" ng-cloak>
   <md-toolbar class="_md _md-toolbar-transitions">
     <div class="md-toolbar-tools">
-      <h2>Mango (Fruit)</h2>
+      <h2>NewBidder</h2>
       <span flex="" class="flex"></span>
     </div>
   </md-toolbar>
@@ -15,7 +15,7 @@
     <form name="form" ng-submit="planCommit()">
       <ul>
         <ul>
-          <!-- <li class="col-md-8 my-price-l">
+          <li class="col-md-8 my-price-l">
             <h2>Billing details</h2>
             <ul class="p-edit">
               <li><i class="icon-circle-blank"></i><span>billing name</span><em>{{item.billingname}}</em></li>
@@ -24,13 +24,13 @@
               <li><i class="icon-circle-blank"></i><span>ZIP / Postal code</span><em>{{item.postalcode}}</em></li>
               <li><i class="icon-circle-blank"></i><span>State /Region</span><em>{{item.stateregion}}</em></li>
               <li><i class="icon-circle-blank"></i><span>Country</span><em>{{item.country}}</em></li>
-              <li class="edit-xg"><em><a id="edit" href="#"><i class="icon-edit"></i>EDIT</a></em></li>
+              <!-- <li class="edit-xg"><em><a id="edit" href="#"><i class="icon-edit"></i>EDIT</a></em></li> -->
             </ul>
-            <h2>Payment method detalis<a href="#"><i class="icon-edit"></i>EDIT</a></h2>
+            <!-- <h2>Payment method detalis<a href="#"><i class="icon-edit"></i>EDIT</a></h2>
             <ul class="p-pay">
               <li><i class="icon-circle-blank"></i><span class="p-pay-l">PayPal account</span><span class="p-pay-r">{{userItem.email}}</span></li>
-            </ul>
-          </li> -->
+            </ul> -->
+          </li>
           <li class="col-md-4 my-price my-price-select">
             <div style="color: #000;" ng-bind-html="desc"></div>
             <button class="btn p-btn btn-three p-btn-02" type="button" disabled><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
