change free trial link

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -90,7 +90,7 @@
                 <span class="line -left"></span>
                 <span class="line -bottom"></span>
             </a></li>
-            <li><a class="freetrial-btn" href="http://beta.newbidder.com/#/access/signup">
+            <li><a class="freetrial-btn" href="http://panel.newbidder.com/free/trial">
                 Free Trial
             </a>
             </li>
