fix subscriptions page bug

--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -12,7 +12,7 @@
 				</tr>
 				<tr>
 					<td>Current period:</td>
-					<td>{{item.statistic.from}} <em ng-show="item.startTime">-</em> {{item.tatistic.to}}</td>
+					<td>{{item.statistic.from}} - {{item.statistic.to}}</td>
 				</tr>
 				<tr>
 					<td>Billed events:</td>
