修改官网sign in address

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -83,7 +83,7 @@
                 <span class="line -top"></span>
                 <span class="line -left"></span>
                 <span class="line -bottom"></span></a></li>
-            <li><a href="http://beta.newbidder.com/#/access/signin">
+            <li><a href="http://panel.newbidder.com/#/access/signin">
                 <span class="text">Sign in</span>
                 <span class="line -right"></span>
                 <span class="line -top"></span>
