--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -66,7 +66,7 @@
             </div>
     </section>
   </md-dialog-content>
-  <md-dialog-actions>
+  <md-dialog-actions ng-class="{hide: noPlan}">
     <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
   </md-dialog-actions>
 </md-dialog>
