--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -42,19 +42,20 @@
 		</div>
     </div>
     <div class="col-sm-12 col-md-6">
-			<h3 class="subscription-title subscription-title2">Plan details</h3>
-			<div class="table-out">
-				<div class="plan-detail">
-					<span>Subscription plan:</span>
-					<div class="pro clearfix">
-						<span>{{item.plan.name}}</span>
-						<span class="pro-right">
-							<span class="pro-price">$<em ng-if="item.plan.price">{{item.plan.price}}</em><em ng-if="!item.plan.price">0</em></span>/mo
-						</span>
-					</div>
-					<md-button class="md-raised copy-btn" ng-disabled="!plans" ng-click="changePlan(item.plan.id)">Change Plan</md-button>
+		<h3 class="subscription-title subscription-title2">Plan details</h3>
+		<div class="table-out">
+			<div class="plan-detail">
+				<span>Subscription plan:</span>
+				<div class="pro clearfix">
+					<span>{{item.plan.name}}</span>
+					<span class="pro-right">
+						<span class="pro-price">$<em ng-if="item.plan.price">{{item.plan.price}}</em><em ng-if="!item.plan.price">0</em></span>/mo
+					</span>
 				</div>
+				<md-button class="md-raised copy-btn" ng-disabled="!plans" ng-click="changePlan(true)">Change Plan</md-button>
 			</div>
+		</div>
+        <div change-plan plan-id="item.plan.id" no-plan="false" ng-if="changePlanStatus" after-cancel="changePlan(false)"></div>
     </div>
   </div>
 </div>
