--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -140,7 +140,7 @@
                                 <md-menu-item ng-if="canEdit"><md-button ng-click="editItem($event, row)">Edit</md-button></md-menu-item>
                                 <md-menu-item ng-if="canEdit"><md-button ng-click="editItem($event, row, true)">Duplicate</md-button></md-menu-item>
                                 <md-menu-item ng-if="canEdit"><md-button ng-click="deleteItem($event, row)">Delete</md-button></md-menu-item>
-                                <md-menu-item>
+                                <!--<md-menu-item>
                                     <md-menu>
                                         <md-button ng-click="$mdMenu.open()">Drilldown by...</md-button>
                                         <md-menu-content width="3">
@@ -149,7 +149,7 @@
                                             </md-menu-item>
                                         </md-menu-content>
                                     </md-menu>
-                                </md-menu-item>
+                                </md-menu-item>-->
                             </md-menu-content>
                         </md-menu>
                     </md-menu-bar>
