--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -79,6 +79,7 @@
 <script src="js/directives/ui-butterbar.js"></script>
 <script src="js/directives/form-validator.js"></script>
 <script src="js/directives/change-plan.js"></script>
+<script src="js/directives/fixed-table-header.js"></script>
 <script src="js/services/resources.js"></script>
 <script src="js/services/values.js"></script>
 <script src="js/services/constants.js"></script>
