--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -70,7 +70,7 @@
                     <input type="checkbox" class="form-control" ng-model="item.impTracking" ng-true-value="1" ng-false-value="0" ng-init="0">
                 </div>
             </div>
-            
+
             <div class="form-group collapsible-tab">
                 <div class="collapsible-header" ng-class="{'active':isActive}" ng-click="toggleShow('1')">
                     <div class="line"></div>
@@ -140,7 +140,7 @@
     </md-dialog-content>
 
     <md-dialog-actions>
-        <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid">{{'save' | translate}}
+        <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid || saveStatus">{{'save' | translate}}
         </md-button>
         <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
