--- a/Front/src/tpl/profile.html
+++ b/Front/src/tpl/profile.html
@@ -51,7 +51,7 @@
       </div>
     </div>
     <div class="profile-form-footer clearfix">
-      <md-button class="save-btn" ng-click="accountSave()" ng-disabled="form.$invalid">
+      <md-button class="save-btn" ng-click="accountSave()" ng-disabled="form.$invalid || accountSaveStatus">
         <i class="icon-ok"></i>
         save
       </md-button>
