--- a/Front/src/tpl/botBlacklist-edit-dialog.html
+++ b/Front/src/tpl/botBlacklist-edit-dialog.html
@@ -48,7 +48,7 @@
                   <label>Useragent</label>
                   <div class="ip-range" ng-repeat="agent in item.userAgentRules track by $index">
                     <div class="clearfix">
-                      <input type="text" class="form-control" name="userAgentRule{{$index}}" 
+                      <input type="text" class="form-control" name="userAgentRule{{$index}}"
                         placeholder="Useragent"
                         ng-model="item.userAgentRules[$index]"
                         ng-blur="blurInput()"
@@ -72,7 +72,7 @@
     </md-dialog-content>
 
     <md-dialog-actions>
-        <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid">{{'save' | translate}}
+        <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid || blackListStatus">{{'save' | translate}}
         </md-button>
         <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
