--- a/Front/src/tpl/invoices-update-dialog.html
+++ b/Front/src/tpl/invoices-update-dialog.html
@@ -80,7 +80,7 @@
     </md-dialog-content>
 
     <md-dialog-actions>
-        <md-button class="md-primary" ng-disabled="editForm.$invalid" ng-click="toPayPal()">{{'save' | translate}}</md-button>
+        <md-button class="md-primary" ng-disabled="editForm.$invalid || invoicesUpdateStatus" ng-click="toPayPal()">{{'save' | translate}}</md-button>
         <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}
         </md-button>
     </md-dialog-actions>
