--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -27,6 +27,10 @@
   					<td>{{item.statistic.includedEvents}}</td>
   				</tr>
   				<tr>
+  					<td>Free events:</td>
+  					<td>{{item.statistic.freeEvents}}</td>
+  				</tr>
+  				<tr>
   					<td>Remaining events:</td>
   					<td>{{item.statistic.remainEvents}}</td>
   				</tr>
