--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -42,10 +42,10 @@
   		</div>
     </div>
     <div class="col-sm-12 col-md-6">
-  		<h3 class="subscription-title subscription-title2">Plan details</h3>
+  		<h3 class="subscription-title">Plan details</h3>
   		<div class="table-out">
   			<div class="plan-detail">
-  				<span>Subscription plan:</span>
+  				<span class="sub-font">Subscription plan:</span>
   				<div class="pro clearfix">
   					<span>{{item.plan.name}}</span>
   					<span class="pro-right">
@@ -55,15 +55,13 @@
   				<md-button class="md-raised copy-btn" ng-disabled="!plans" ng-click="changePlan(true)">Change Plan</md-button>
   			</div>
   		</div>
-      <h3 class="subscription-title subscription-title2">Coupon</h3>
-      <div class="table-out">
+      <h3 class="subscription-title subscription-title2">Coupon :</h3>
+      <div class="table-out table-out-coupon">
         <form name="couponForm" ng-submit="$event.preventDefault()">
           <div class="form-group">
-            <input type="text" class="form-control" name="coupon" ng-model="couponText" placeholder="Please input your coupon" required>
-          </div>
-          <div class="text-center">
-            <md-button class="md-raised copy-btn" ng-disabled="couponForm.coupon.$invalid || couponStatus" ng-click="changeCoupon(couponText)">Submit</md-button>
-          </div>
+            <input type="text" class="form-control form-control-two" name="coupon" ng-model="couponText" placeholder="Please input your coupon" required>
+			  <md-button class="md-raised copy-btn" ng-disabled="couponForm.coupon.$invalid || couponStatus" ng-click="changeCoupon(couponText)">Submit</md-button>
+		  </div>
         </form>
       </div>
       <div change-plan plan-id="item.plan.id" no-plan="false" ng-if="changePlanStatus" after-cancel="changePlan(false)"></div>
