--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -160,7 +160,7 @@
                 </td>
               </tr>
             </tbody>
-            <tfoot md-body ng-if="report.totalRows != 0">
+            <tfoot md-body>
               <tr md-row>
                 <td md-cell ng-if="treeLevel>1"></td>
                 <td md-cell ng-if="treeLevel>1">Total</td>
