--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -59,13 +59,13 @@
   				<md-button class="md-raised copy-btn" ng-disabled="!plans" ng-click="changePlan(true)">Change Plan</md-button>
   			</div>
   		</div>
-      <h3 class="subscription-title subscription-title2">Coupon :</h3>
+      <h3 class="subscription-title subscription-title2">Coupon code</h3>
       <div class="table-out table-out-coupon">
         <form name="couponForm" ng-submit="$event.preventDefault()">
-          <div class="form-group">
-            <input type="text" class="form-control form-control-two flex" name="coupon" ng-model="couponText" placeholder="Please input your coupon" required>
-			  <md-button class="md-raised copy-btn" ng-disabled="couponForm.coupon.$invalid || couponStatus" ng-click="changeCoupon(couponText)">Submit</md-button>
-		  </div>
+          <div class="form-group" layout="row">
+            <input type="text" class="form-control form-control-two flex" style="height: 32px;" name="coupon" ng-model="couponText" placeholder="Please input your coupon" required>
+			      <md-button style="margin: 0;" class="md-raised copy-btn" ng-disabled="couponForm.coupon.$invalid || couponStatus" ng-click="changeCoupon(couponText)">Submit</md-button>
+		      </div>
         </form>
       </div>
       <div change-plan plan-id="item.plan.id" no-plan="false" ng-if="changePlanStatus" after-cancel="changePlan(false)"></div>
