update plan & add qq refer

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -269,11 +269,11 @@
                     <small class="money-small">/ 2weeks</small>
                 </div>
                 <div class="pricedesc">
-                    <p>0.045/1000 overage</p>
-                    <p>450000 included events</p>
+                    <p>870000 included events</p>
+                    <p>0.045/1000 overage charge</p>
                 </div>
                 <ol class="pricedesc-list">
-                    <li>3 Traffic <b>Source RAW Report</b> (in the list)</li>
+                    <li>3 Traffic <b>Source RAW Report</b> <br>(in the list)</li>
                     <li>Skype Support 24/7</li>
                     <li>3 month data <b>retention</b></li>
                     <li>1 custom tracking <b>domains</b></li>
@@ -291,11 +291,11 @@
                      <small class="money-small">/ Mon</small>
                  </div>
                  <div class="pricedesc">
-                     <p>1000000 includedevents</p>
+                     <p>2550000 includedevents</p>
                      <p>0.035/1000 overage charge</p>
                  </div>
                  <ol class="pricedesc-list">
-                     <li>5 Traffic <b>Source RAW Report</b></li>
+                     <li>5 Traffic <b>Source RAW Report</b> <br>(in the list)</li>
                      <li>Skype Support 24/7</li>
                      <li>6 month data <b>retention</b></li>
                      <li>5 custom tracking <b>domains</b></li>
@@ -320,9 +320,9 @@
            <p>0.03/1000 overage charge</p>
            </div>
            <ol class="pricedesc-list">
-               <li>10 Traffic <b>Source RAW Report</b> (in the list,3 can be custom)</li>
+               <li>10 Traffic <b>Source RAW Report</b> <br>(in the list,3 can be custom)</li>
                <li>Skype Support 24/7</li>
-               <li>1 year data retention</li>
+               <li>1 year data <b>retention</b></li>
                <li>10 custom <b>tracking domains</b></li>
                <li>Newbidder DSP (event not included)</li>
                <li>Affiliate Network Offer <b>Management</b></li>
@@ -338,16 +338,16 @@
                 <div class="p-header">
                     <small class="money-icon">$</small>
                     <span class="money-size">899</span>
-                    <small class="money-small">/ MO</small>
+                    <small class="money-small">/ Mon</small>
                 </div>
                 <div class="pricedesc">
                     <p>30000000 included events</p>
                 <p>0.025/1000 overage charge</p>
                 </div>
                 <ol class="pricedesc-list">
-                    <li>20+ Traffic Source RAW Report (in the list,5 can be custom)</li>
+                    <li>20+ Traffic <b>Source RAW Report</b> <br>(in the list,5 can be custom)</li>
                     <li>Skype Support 24/7</li>
-                    <li>2 year data retention</li>
+                    <li>2 year data <b>retention</b></li>
                     <li>30 custom <b>tracking domains</b></li>
                     <li>Newbidder DSP (event not included)</li>
                     <li>Affiliate Network Offer <b>Management</b></li>
@@ -610,6 +610,7 @@
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
                     <li><a href="https://twitter.com/newbidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
+                    <li><a href="#"><i class="qq"></i>490922827</a></li>
                 </ul>
                 </div>
                 <div class="col-xs-12 col-md-6">
