--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -59,7 +59,7 @@
   				<md-button class="md-raised copy-btn" ng-disabled="!plans" ng-click="changePlan(item.plan.id)">Change Plan</md-button>
   			</div>
   		</div>
-      <h3 class="subscription-title subscription-title2">Coupon code</h3>
+      <h3 class="subscription-title">Coupon code :</h3>
       <div class="table-out table-out-coupon">
         <form name="couponForm" ng-submit="$event.preventDefault()">
           <div class="form-group" layout="row">
