官网css QQ plan js

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -260,28 +260,44 @@
 <div class="pricing-box clearfix">
     <div class="container">
         <ul>
-        <li class="w-md w-md3 h-line">
-            <div class="p-header-box">
-                <h2>STARTER</h2>
-                <div class="p-header">
-                    <small class="money-icon">$</small>
-                    <span class="money-size">39</span>
-                    <small class="money-small">/ 2weeks</small>
-                </div>
-                <div class="pricedesc">
-                    <p>870000 included events</p>
-                    <p>0.045/1000 overage charge</p>
-                </div>
-                <ol class="pricedesc-list">
-                    <li>3 Traffic <b>Source RAW Report</b> <br>(in the list)</li>
-                    <li>Skype Support 24/7</li>
-                    <li>3 month data <b>retention</b></li>
-                    <li>1 custom tracking <b>domains</b></li>
-                    <li>Newbidder DSP (event not included)</li>
-                </ol>
-                <!--<button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
+        <!--<li class="w-md w-md3 h-line">-->
+            <!--<div class="p-header-box">-->
+                <!--<h2>STARTER</h2>-->
+                <!--<div class="p-header">-->
+                    <!--<small class="money-icon">$</small>-->
+                    <!--<span class="money-size">39</span>-->
+                    <!--<small class="money-small">/ 2weeks</small>-->
+                <!--</div>-->
+                <!--<div class="pricedesc">-->
+                    <!--<p>870000 included events</p>-->
+                    <!--<p>0.045/1000 overage charge</p>-->
+                <!--</div>-->
+                <!--<ol class="pricedesc-list">-->
+                    <!--<li>3 Traffic <b>Source RAW Report</b> <br>(in the list)</li>-->
+                    <!--<li>Skype Support 24/7</li>-->
+                    <!--<li>3 month data <b>retention</b></li>-->
+                    <!--<li>1 custom tracking <b>domains</b></li>-->
+                    <!--<li>Newbidder DSP (event not included)</li>-->
+                <!--</ol>-->
+                <!--&lt;!&ndash;<button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>&ndash;&gt;-->
 
-             </div></li>
+             <!--</div></li>-->
+            <li class="w-md w-md3 free-green">
+                <div class="p-header-box">
+                    <h2>Free</h2>
+                    <div class="pricedesc">
+                        <p>200000 included events</p>
+                    </div>
+                    <ol class="pricedesc-list">
+                        <li>Skype Support 24/7</li>
+                        <li>3 month data <b>retention</b></li>
+                        <li>1 custom tracking <b>domains</b></li>
+                        <li>Newbidder DSP (event not included)</li>
+                    </ol>
+                    <!--<button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
+
+                </div></li>
+
          <li class="w-md w-md3 h-line2">
              <div class="p-header-box">
                  <h2>PRO</h2>
@@ -291,7 +307,7 @@
                      <small class="money-small">/ Mon</small>
                  </div>
                  <div class="pricedesc">
-                     <p>2550000 includedevents</p>
+                     <p>2550000 included events</p>
                      <p>0.035/1000 overage charge</p>
                  </div>
                  <ol class="pricedesc-list">
@@ -373,7 +389,7 @@
                         </div>
                         <div class="col-sm-3 col-md-3">
                             <input type="text" name="eventsSliderNumber" value="" class="eventsSliderNumber numberField" placeholder="">
-                            <a href="http://beta.newbidder.com/#/access/signin"><button class="register-btn btn-three" type="button">Sign in</button></a>
+                            <a href="http://panel.newbidder.com/free/trial"><button class="register-btn btn-three" type="button">Sign in</button></a>
                             </div>
                         </div>
                     </div>
@@ -610,8 +626,8 @@
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
                     <li><a href="https://twitter.com/newbidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
-                    <li><a class="qq" target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cc321816fb1f51c997a8e7c62b177f6ca9825393727b259e1319292d236f6392">
-                         <img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="NewBidder官方支持群" title="NewBidder官方支持群"> : 490922827</a></li>
+                    <li><a class="qq" target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cc321816fb1f51c997a8e7c62b177f6ca9825393727b259e1319292d236f6392" alt="NewBidder官方支持群" title="NewBidder官方支持群">
+                        <span>490922827</span></a></li>
                 </ul>
                 </div>
                 <div class="col-xs-12 col-md-6">
