--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -5,15 +5,9 @@
       <span flex="" class="flex"></span>
     </div>
   </md-toolbar>
-  <md-dialog-content class="md-dialog-content">
-    <div class="nav-box">
-      <div>
-        <a class="logo2" href="#"><img class="img-responsive" src="../assets/img/logo-two.png"></a>
-      </div>
-    </div>
+  <md-dialog-content class="md-dialog-content" style="padding: 15px 30px;">
     <div class="edit-pricing-box clearfix">
     <form name="form" ng-submit="planCommit()">
-      <ul>
         <ul>
           <li class="col-md-8 my-price-l">
             <h2>Billing details</h2>
@@ -36,14 +30,9 @@
             <button class="btn p-btn btn-three p-btn-02" type="button" disabled><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
           </li>
         </ul>
-      </ul>
     </form>
     </div>
 
-    <div class="bottom-box">
-      © Copyright  new bidder. 2017 All rights reserved
-      <span><a href="#">Privacy policy</a>|<a href="#">Terms and conditions</a></span>
-    </div>
   </md-dialog-content>
   <md-dialog-actions layout="row">
     <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
